package cn.superid.webapp.proto;

option java_outer_classname = "Message";

message {
     required string type = 1;
     optional string subType = 2;
     optional string displayName = 3;
     optional uint64 fromUserId = 4;
     optional uint64 toUserId = 5;
     optional uint64 toRoleId = 6;
     optional uint64 affairId = 7;
     optional uint64 relatedId = 8;
     optional uint32 state = 9;
     optional string content = 10;
 }




